[package]
name = "magoo"
version = "0.0.3"
edition = "2021"
description = "A wrapper for git submodule that simplifies the workflows"
repository = "https://github.com/Pistonite/magoo"
license = "MIT"
authors = ["Pistonight <terrabyte100k@gmail.com>"]
keywords = ["git", "tool", "submodule"]
categories = ["development-tools"]
exclude = [
    ".github/**/*",
    "README.txtpp.md",
    "Taskfile.yml"
]

[dependencies]
clap = { version = "4.4.8", features = ["derive"], optional = true }
fs4 = "0.7.0"
pathdiff = "0.2.1"
termcolor = "1.4.0"
thiserror = "1.0.50"
which = "5.0.0"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
name = "magoo"
path = "src/lib.rs"

[[bin]]
name = "magoo"
path = "src/main.rs"
required-features = ["cli"]
