[package]
name = "magoo"
version = "0.2.2"
edition = "2024"
description = "A wrapper for git submodule that simplifies the workflows"
repository = "https://github.com/Pistonite/magoo"
license = "MIT"
authors = ["Pistonight <pistonknight@outlook.com>"]
keywords = ["git", "tool", "submodule", "cli"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".github/**/*",
    "README.txtpp.md",
    "Taskfile.yml",
    "magoo.txt",
    "magoo.webp"
]

[dependencies]
clap = { version = "4.5.38", features = ["derive"], optional = true }
fs4 = "0.13.1"
pathdiff = "0.2.3"
semver = "1.0.26"
termcolor = "1.4.1"
thiserror = "2.0.12"
which = "7.0.3"

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
name = "magoo"
path = "src/lib.rs"

[[bin]]
name = "magoo"
path = "src/main.rs"
required-features = ["cli"]
